[tool.poetry]
name = "djangocms-blog"
version = "1.1.1"
description = "django CMS blog application - Support for multilingual posts, placeholders, social network meta tags and configurable apphooks."
authors = ["Carl Marshall <marshalc@users.noreply.github.com>"]

[tool.poetry.dependencies]
# Override the PyPi versions for some dependancies to get the Django 3.0 compatible versions
aldryn-apphooks-config = { git = "https://github.com/yakky/aldryn-apphooks-config.git", branch = "feature/django-3.0" }
django-appdata = { git = "https://github.com/marshalc/django-appdata.git" }
# Regular DjangoCMS-blog requirements
python = ">=3.6 <4"
lxml = "^4.5.0"
django-parler = "^2.0.1"
pytz = "^2020.1"
django-taggit-autosuggest = "^0.3.8"
django-meta = "^1.6.1"
django-taggit = "^1.2.0"
django-sortedm2m = "^3.0.0"
django-filer = "^1.7.1"
django-cms = "^3.7.2"
easy-thumbnails = "^2.7"
djangocms-text-ckeditor = "^3.9.0"
djangocms-apphook-setup = "^0.4.1"

[tool.poetry.dev-dependencies]
wheel = "^0.34.2"
tox = "^3.14.6"
coveralls = "^2.0.0"
django-app-helper = "^2.2.1"
sphinx-autobuild = "^0.7.1"
pysolr = "^3.9.0"
coverage = "^5.1"
django-nose = "^1.4.6"
djangocms-video = "^2.3.0"
mock = "^4.0.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
